Updated logic for parsing JSON responses and handling optional fields. Corrected key mappings